Font size for caption

--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="item">
-      <div style="max-width: 50%; margin: 0 auto; text-align: center;">
+      <div style="max-width: 50%; margin: 0 auto;">
         <img src="static/images/overall_architecture.png"
              alt="MY ALT TEXT"
              style="width: 100%; height: auto;" />
         <!-- Caption -->
-        <h2 class="subtitle">
+        <h2 class="subtitle" style="font-size: 0.9rem; text-align: justify; margin-top: 0.5rem;">
           <strong>Figure 1</strong>: Relationship between EPR and APT (top left) and an overview of the proposed framework.
           The model comprises a joint transformer-based architecture for EPR and APT, along with a
           diffusion-based performance style recommendation (PSR) module. Four tasks are trained jointly:
