--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Affiliation<br>NeurIPS 2025 Submission</span>
+                    <span class="author-block">Affiliation<br>JointPianist</span>
                   </div>
 
                   <div class="column has-text-centered">
